# fingerprint_matching

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  run_experiment.py
data/: 15.txt  18.txt  19.txt  2.txt  22.txt  24.txt  26.txt  27.txt  28.txt  3.txt  30.txt  31.txt  32.txt  37.txt  39.txt  41.txt  42.txt  44.txt  45.txt  48.txt  50.txt  7.txt  8.txt  create_list.py  distortion.py
data/reference/: 1.txt  10.txt  11.txt  12.txt  13.txt  14.txt  16.txt  17.txt  20.txt  21.txt  23.txt  25.txt  29.txt  33.txt  34.txt  35.txt  36.txt  38.txt  4.txt  40.txt  43.txt  46.txt  47.txt  49.txt  5.txt  6.txt  9.txt  THANKS
src/: CMakeLists.txt  basicmath.c  basicmath.h  common.c  common.h  convexhull.c  convexhull.h  fingerprint.c  fingerprint.h  fingerprintset.c  fingerprintset.h  line.c  line.h  minutiae.c  minutiae.h  minutiaset.c  minutiaset.h  point.c  point.h  polygon.c  polygon.h  secondaryfeature.c  secondaryfeature.h  secondaryfeatureset.c  secondaryfeatureset.h  similarity.c  similarity.h  type.h  vec.c  vec.h
test/: CMakeLists.txt  fingerprint_secondary_feature_test.c  fingerprint_test.c  fingerprintset_test.c  minutiae_test.c  minutiaset_test.c  secondaryfeature_test.c
